--- a/koodipaja/paketit.html
+++ b/koodipaja/paketit.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
-<body>
+<body onload="document.getElementById('table1').style.opacity = '1'">
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <a style="color: lightblue;" class="navbar-brand" href="index.html">Koodipaja</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
