--- a/koodipaja/tietoa.html
+++ b/koodipaja/tietoa.html
@@ -25,7 +25,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body onload="document.getElementById('images').style.opacity = '1'">
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <a style="color: lightblue;" class="navbar-brand" href="index.html">Koodipaja</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -54,7 +54,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row" id="images">
         <div class="column">
           <div class="card" style="margin-left: 25px; margin-right: 25px;" id="box1">
             <a href="./img/iocenters-2673326_960_720.jpg"> <img src="./img/iocenters-2673326_960_720.jpg" style="width:100%; position: relative; margin-left: auto; margin-right: auto;"> </a>
