--- a/koodipaja/index.html
+++ b/koodipaja/index.html
@@ -34,6 +34,15 @@
             <li class="nav-item">
               <a class="nav-link" href="ostoskori.html">Ostoskori</a>
             </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                Tili
+              </a>
+              <div class="dropdown-menu" id="dropdown">
+                <a class="dropdown-item" id="tab1" href="login.html">Kirjaudu sisään</a>
+                <a class="dropdown-item" id="tab1" href="register.html">Rekisteröidy</a>
+              </div>
+            </li>
           </ul>
         </div>  
       </nav>
