--- a/koodipaja/paketit.html
+++ b/koodipaja/paketit.html
@@ -42,8 +42,8 @@
                 Tili
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="login.html">Kirjaudu sisään</a>
-                <a class="dropdown-item" href="register.html">Rekisteröidy</a>
+                <a class="dropdown-item" id="tab1" href="login.html">Kirjaudu sisään</a>
+                <a class="dropdown-item" id="tab1" href="register.html">Rekisteröidy</a>
               </div>
             </li>
           </ul>
